navbar overflow css fixed

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -71,6 +71,7 @@ body {
 header.navbar {
   border-radius: 0;
   border: none;
+  margin-bottom: 0;
 }
 
 section + section {
